[package]
name = "integration-tests"
edition = "2021"
version = "0.1.0"
license = "MIT"
description = "The Integration Tests for JoyGotchi"

[dev-dependencies]
anyhow = "1.0"
borsh = "1.2.0"
maplit = "1.0"
near-units = "0.2.0"
near-token = "0.2.0"
near-gas = { version = "0.2.3", features = ["serde", "borsh", "schemars"] }
near-jsonrpc-primitives = "0.17"
near-primitives = "0.17"
serde = { version= "1.0", features = ["derive"]}
serde_with = "3.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
near-workspaces = {  version = "0.11.1" }
near-sdk = "4.0.0"


[[example]]
name = "faucet"
path = "src/faucet.rs"

[[example]]
name = "pet"
path = "src/joy_pet.rs"

